# handwriting-web

backend/: app.py  dockerfile.backend  pyproject.toml  requirements.txt
frontend/: package.json  pnpm-lock.yaml
frontend/src/: main.js
