[tool.poetry]
name = "handwriting-backend"
version = "1.0.0"
description = "handwriting-backend"
authors = ["Liuweiqing liuweiqing147@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

# Core framework
flask = "^3.1.0"
werkzeug = "^3.1.0"

# Flask extensions
flask-cors = "^6.0.2"
flask-limiter = "^4.1.1"
flask-session = "^0.8.0"

# Handwriting generation
handrightbeta = "8.6.0"

# Image processing
pillow = ">=10.4.0,<11"
opencv-python = "^4.10.0"
numpy = "^1.26.0"
scikit-learn = "^1.6.0"

# Document processing
pymupdf = ">=1.25.0,<2"
pypdf2 = "^3.0.1"
pypandoc = "^1.15"
python-docx = "^1.1.0"

# Utilities
python-dotenv = "^1.0.0"
schedule = "^1.2.0"
psutil = "^6.0.0"

# Monitoring
sentry-sdk = { extras = ["flask"], version = "^2.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
